Sonar, integer instantiation